# nlpp-grammar

./: .gitattributes  .gitignore  .npmrc  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar-plan.md  grammar.js  nlpp-spec-v0.3.md  nlpp-spec-v0.4.md  nlpp-spec-v1.0.md  nlpp.tmLanguage.json  package-lock.json  package.json  pyproject.toml  setup.py  test.nlpp  tree-sitter-nlpp.wasm  tree-sitter.json
.github/workflows/: publish.yml  release.yml  test.yml
bindings/c/: tree-sitter-nlpp.pc.in
bindings/c/tree_sitter/: tree-sitter-nlpp.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  browser-stub.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nlpp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNlppTests/: TreeSitterNlppTests.swift
docs/superpowers/specs/: 2026-07-14-type-refs-templates-and-method-prose-design.md
examples/: README.md  app.nlpp  catalogue.nlpp  class.nlpp  definitions.nlpp  lending.nlpp  types.nlpp
queries/: highlights.scm
scripts/: check-highlight-parity.mjs  check-package.mjs  check-spec-version.mjs  parity-fixtures.mjs  parse-examples.mjs
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  block.txt  block_keyword.txt  blocks.txt  comments.txt  define.txt  import.txt  prose.txt  statements.txt
