[package]
name = "tree-sitter-nlpp"
description = "Parser for the Natural Language++ pseudo-code spec for AI agents"
version = "0.1.0"
authors = ["Simone Sturniolo <simonesturniolo@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nlpp"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/stur86/nlpp-grammar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
